--- a/style.css
+++ b/style.css
@@ -183,7 +183,7 @@ body{
     
   
 }
-@media only screen and (max-width: 330px){
+@media only screen and (max-width: 350px){
     .para h1{
         font-size:25px;
     }
@@ -220,8 +220,39 @@ body{
 }
 @media only screen and (max-width:300px) {
     #userInput{
-        font-size: 12px;
+        font-size: 10px;
         padding: 3px 5px;
         
      }
+     .para h1{
+        font-size:20px;
+    }
+    .para p:nth-child(2){
+        font-size: 10px;
+    }
+    .para p:nth-child(3){
+        font-size: 10px;
+    }
+    #guess{
+        font-size: 20px;
+    }
+}
+@media only screen and (max-width:250px) {
+    #userInput{
+        font-size: 10px;
+        padding: 3px 5px;
+        
+     }
+     .para h1{
+        font-size:15px;
+    }
+    .para p:nth-child(2){
+        font-size: 8px;
+    }
+    .para p:nth-child(3){
+        font-size: 8px;
+    }
+    #guess{
+        font-size: 15px;
+    }
 }
